# native-to-mainstay

./: LICENSE  README.md
client/: package.json
client/tests/: README.md  package.json
client/tests/src/: index.ts  utils.ts
client/tests/src/example/: nta-example.ts
client/tests/src/spl/: associated-token-account.ts  binary-option.ts  binary-oracle-pair.ts  feature-proposal.ts  memo.ts  name-service.ts  record.ts  stake-pool.ts  stateless-asks.ts  token-lending.ts  token-swap.ts  token.ts
example/: README.md
example/program/: Cargo.toml
generator/: Cargo.toml
generator/src/: cli.rs  coder.rs  idl.rs
generator/src/constants/: coder.rs  idl.rs  known_types.rs
generator/src/utils/: coder.rs  common.rs  idl.rs
