[package]
name = "native-to-mainstay"
description = "Generate Mainstay IDLs and clients from native Solana programs"
version = "0.1.0"
authors = ["acheron <nxpkg@gmail.com>"]
repository = "https://github.com/nxpkg/native-to-mainstay"
documentation = "https://github.com/nxpkg/native-to-mainstay/blob/master/README.md"
license = "MIT"
edition = "2021"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock"
]
keywords = ["native-to-mainstay", "solana", "mainstay", "mainstay-client", "nta"]

[dependencies]
mainstay-syn = { version = "0.25.0", features = ["idl"] }
clap = { version = "3.2.16", features = ["derive"] }
colored = "2.0.0"
log = "0.4.17"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
toml = "0.5.9"

[[bin]]
name = "native-to-mainstay"
path = "src/main.rs"
